// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component renders a video with default props 1`] = `
<div>
  <div
    class="sx03kze"
    role="figure"
    style="width: 100%; height: 405px;"
  >
    <div
      style="width: 100%; height: 100%; overflow: hidden;"
    />
  </div>
</div>
`;

exports[`Video component renders a video with light option enabled 1`] = `
<div>
  <div
    class="sx03kze"
    role="figure"
    style="width: 50px; height: 50px;"
  />
</div>
`;
